k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hydra
  labels:
    name: hydra
    app: hydra-vj-mixer
