k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hydra-service
  namespace: hydra
  labels:
    app: hydra
    component: vj-mixer
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 8080
    targetPort: 8080
    protocol: TCP
  - name: websocket
    port: 8081
    targetPort: 8081
    protocol: TCP
  selector:
    app: hydra
    component: vj-mixer

---
apiVersion: v1
kind: Service
metadata:
  name: hydra-nodeport
  namespace: hydra
  labels:
    app: hydra
    component: vj-mixer
    service-type: nodeport
spec:
  type: NodePort
  ports:
  - name: http
    port: 8080
    targetPort: 8080
    nodePort: 30080
    protocol: TCP
  - name: websocket
    port: 8081
    targetPort: 8081
    nodePort: 30081
    protocol: TCP
  selector:
    app: hydra
    component: vj-mixer
